--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 PORT=5000
-OPENAI_API_KEY=''
-TAVILY_API_KEY= ''
-ALPHAVANTAGE_API_KEY=''
-APIFY_API_TOKEN = ''
+OPENAI_API_KEY=yy
+TAVILY_API_KEY=yy
+ALPHAVANTAGE_API_KEY=yy
+APIFY_API_TOKEN=yy
+GMAIL_APP_PASSWORD=yy # create app password from google dashbaord for this.
+GMAIL_MAIL=yy
+CALENDLY_API_KEY=yy
+CALENDLY_EVENT_UUID=yy
